Add /models endpoint to Swagger and API
